# chs2t

./: CMakeLists.txt  README.md
cfg/trains/: chs2t-single.xml  chs2t-train.xml
cfg/vehicles/chs2t/: AL-4846dT.xml  chs2t-977.xml
chs2t/: CMakeLists.txt  chs2t.pro
chs2t-equipment/include/: generator.h  km-21kr2.h  motor.h  sl2m.h
chs2t-equipment/src/: generator.cpp  km-21kr2.cpp  motor.cpp  sl2m.cpp
chs2t/include/: chs2t-signals.h  chs2t.h
chs2t/src/: chs2t-debug-message.cpp  chs2t-init-brake-devices.cpp  chs2t-init-brakes-control.cpp  chs2t-init-brakes-epb.cpp  chs2t-init-brakes-equipment.cpp  chs2t-init-couplings.cpp  chs2t-init-pneumo-supply.cpp  chs2t-init-safety-device.cpp  chs2t-init.cpp  chs2t-key-process.cpp  chs2t-registrate.cpp  chs2t-signals.cpp  chs2t-step-brakes-control.cpp  chs2t-step-brakes-equipment.cpp  chs2t-step-couplings.cpp  chs2t-step-pneumo-supply.cpp  chs2t-step-safety-device.cpp  chs2t-step-sounds.cpp  chs2t-step-switcher-panel.cpp  chs2t-step.cpp  chs2t.cpp
data/animations/chs2t/: Ls-G.xml  Ls-R.xml  Ls-W.xml  Ls-Y.xml  Ls-YR.xml  Strelka_Speed.xml  Val_prSkor-1.xml  Val_prSkor-2.xml  sw_EDT.xml  sw_EPT.xml
data/sounds/chs2t/: kompressor.mrk  kompressor.wav.gpk  sounds.xml  svistok.mrk  svistok.wav.gpk  tifon.sfk
docs/: CHS2t-user-manual.docx
scripts/: deploy.bat
